--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
     <div class="container">
         <h2>Main</h2>
         <h4>Please enter exchnage rate : </h4>
-        <form action = "/dbs" methods = "POST">
+        <form action = "/dbs" method = "POST">
             <input type = "number" step ="0.01" name = "q">
             <input type = "submit" value = "Enter">
         </form>
